# test-depgraph

./: .gitignore  ARCHITECTURE.md  DESIGN.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/: README.md
examples/basic_project/app/: __init__.py  controllers.py  models.py  services.py
examples/basic_project/util/: helpers.py
examples/cyclic_project/: __init__.py  alpha.py  beta.py
src/depgraph/: __init__.py  __main__.py  cli.py  config.py
src/depgraph/graph/: dependency_graph.py  module_node.py
src/depgraph/parsing/: ast_parser.py  project.py
src/depgraph/rendering/: visualizers.py
tests/: README.md  test_ast_parser.py  test_dependency_graph.py  test_project.py
