[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depgraph"
version = "0.1.0"
description = "Command-line tool to visualize Python project dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "DepGraph Contributors" }
]
dependencies = [
  "graphviz>=0.20.0",
]

[project.urls]
Homepage = "https://example.com/"
Repository = "https://example.com/repo"

[project.scripts]
depgraph = "depgraph.cli:DepGraphCLI.main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["depgraph*"]

