[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depgraph"
version = "0.2.0"
description = "Command-line tool to visualize Python project dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "DepGraph Maintainers" }
]
keywords = ["dependencies", "graphviz", "architecture", "visualization", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities"
]
dependencies = [
  "graphviz>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/axonemephi/depgraph"
Repository = "https://github.com/axonemephi/depgraph"
Issues = "https://github.com/axonemephi/depgraph/issues"

[project.scripts]
depgraph = "depgraph.cli:DepGraphCLI.main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["depgraph*"]

